--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="input-group">
                 <label for="interestRate">Interest Rate (%)</label>
-                <input type="number" id="interestRate" required>
+                <input type="text" id="interestRate" required>
             </div>
             <div class="input-group">
                 <label for="installments">Number of Installments</label>
